# causal-inference-study

./: .gitignore  README.md  pyproject.toml
notebooks/: multi_trace.ipynb
src/csi/: multivar_trace.py
